# wsl-tools

./: Cargo.toml  Makefile  README.ja.md  README.md  Setup.iss  build.rs
src/: clipboard.rs  config.rs  hglobal.rs  lib.rs  macros.rs  message_box.rs  process.rs  recycle_bin.rs  recycle_error.rs  recycle_progress_sink.rs  vscode.rs  wslpath.rs
tests/: clipboard_tests.rs  clipboard_via_powershell.rs  recycle_bin_tests.rs  wslpath_tests.rs  xsel_harness.rs  xsel_tests.rs
tests/utils/: clipboard_via_powershell.rs  mod.rs
