[package]
name = "wsl-tools"
version = "0.1.0"
authors = ["Max Kagamine"]
repository = "https://github.com/maxkagamine/wsl-tools"
license = "Apache-2.0"
edition = "2024"

[package.metadata.winresource]
LegalCopyright = "Copyright © Max Kagamine"

[dependencies]
clap = { version = "4.5.32", features = ["cargo", "derive", "wrap_help"] }
windows-core = { version = "0.61.0" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.0"
features = [
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_UI_Shell",
]

[dev-dependencies]
assert_cmd = "2.0.16"
base64 = "0.22.1"

[build-dependencies]
winresource = "0.1.20"
