[package]
name = "wsl-tools"
version = "1.4.2"
authors = ["Max Kagamine"]
repository = "https://github.com/maxkagamine/wsl-tools"
license = "Apache-2.0"
edition = "2024"

[package.metadata.winresource]
LegalCopyright = "Copyright © Max Kagamine"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["cargo", "derive", "wrap_help"] }
shell-escape = "0.1.5"
percent-encoding = "2.3.2"

[target.'cfg(windows)'.dependencies]
windows-core = "0.61.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.0"
features = [
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
assert_cmd = "2.0.16"
base64 = "0.22.1"

[build-dependencies]
winresource = "0.1.20"
